# interactive-map-planner

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  ty.toml
app/: main.py
app/utils/: html_map.py  kml_exporter.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routers/: places.py  search.py
backend/app/business/: places_mgr.py  search_mgr.py
backend/app/data/: singapore_places.csv
backend/app/dataaccess/: osm_repo.py  places_repo.py
backend/app/models/: __init__.py  config.py  domain.py
backend/app/services/: database.py  geocoding.py
backend/app/utils/: html_map.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: endpoints.ts
frontend/src/components/: MapView.tsx  Sidebar.tsx
frontend/src/types/: schema.ts
utils/: __init__.py  html_map.py  kml_exporter.py
