[project]
name = "interactive-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "folium>=0.20.0",
]
[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "ASYNC", "W", "N", "SIM", "TID"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = ["F401"]
