[project]
name = "interactive-map"
version = "0.1.0"
description = "Streamlit interactive map application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "streamlit>=1.32.0",      # Added for your Streamlit app
    "pandas==2.2.3",          # Kept from template (useful for map data)
    "python-dotenv==1.1.1",   # Kept from template (useful for env vars)
    "fastapi>=0.123.0",
    "uvicorn>=0.38.0",
    "sqlmodel>=0.0.27",
    "geopy>=2.4.1",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
    # djlint is often used for HTML templates; you can remove it if you only write pure Python Streamlit
    "djlint>=1.36.4",
    "ty>=0.0.1a29",
]

# --- Tooling Configuration ---

[tool.ruff]
line-length = 100
exclude = [
    "build",
    "dist",
    ".venv",
    ".git",
    "__pycache__",
]

[tool.ruff.lint]
# E: pycodestyle (errors), F: Pyflakes, I: isort, UP: pyupgrade
# B: flake8-bugbear, ASYNC: flake8-async, W: pycodestyle (warnings)
# N: pep8-naming, SIM: flake8-simplify, TID: flake8-tidy-imports
select = ["E", "F", "I", "UP", "B", "ASYNC", "W", "N", "SIM", "TID"]

# Ignore line length during lint (E501), let the formatter handle it
ignore = ["E501"]

# Don't automatically remove unused imports (F401)
unfixable = ["F401"]

[tool.ruff.lint.isort]
# Ruff handles import sorting automatically
known-first-party = ["app"] 
[tool.ruff.format]
# Default formatting options

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]         # Allow assert in tests
"__init__.py" = ["F401"]     # Allow unused imports in __init__
"migrations/*" = ["E501"]    # Allow long lines in migrations

[tool.ty]
# Ty is zero-config by default and auto-detects your environment/python version.
# You can add specific rule exclusions here in the future.
[tool.ty.environment]

# Relax rules for test files
[[tool.ty.overrides]]
include = ["tests/**", "**/test_*.py"]
[tool.ty.overrides.rules]
possibly-unresolved-reference = "warn"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
# Adds 'app' to python path so tests can do `from my_module import ...`
pythonpath = ["app"]
